# telemetry-project

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  compose.yml  pyproject.toml  pytest.ini
app/: logging_config.py  main.py  settings.py
app/api/: deps.py  rate_limits.py
app/api/routes/: alert.py  api_key.py  device.py  org.py  project.py  rule.py  telemetry.py  webhook.py  webhook_delivery.py
app/core/: __init__.py  security.py
app/db/: session.py
app/db/migrations/: env.py
app/db/models/: __init__.py  alert.py  api_key.py  device.py  device_tag.py  org.py  project.py  rule.py  rule_device.py  telemetry_event.py  webhook_delivery.py  webhook_subscription.py
app/db/repositories/: alert_repo.py  api_key_repo.py  device_repo.py  org_repo.py  project_repo.py  rule_repo.py  telemetry_repo.py  webhook_delivery_repo.py  webhook_repo.py
app/middlewares/: logging.py
app/schemas/: __init__.py  alert.py  api_key.py  device.py  device_tags.py  org.py  project.py  rule.py  telemetry.py  webhook.py  webhook_delivery.py
app/scripts/: seed_demo.py
app/services/: alert_service.py  api_key_service.py  circuit_breaker.py  device_service.py  evaluation_service.py  org_service.py  project_service.py  rule_service.py  telemetry_service.py  webhook_service.py
app/tests/: conftest.py
app/tests/test_api/: test_authentication.py  test_devices.py  test_rules.py  test_telemetry.py
app/tests/test_integration/: test_alert_flow.py
app/tests/test_services/: test_evaluation_service.py
app/tests/test_workers/: test_ingest.py  test_webhook_delivery.py
app/workers/: celery_app.py
app/workers/tasks/: __init__.py  evaluate_rules.py  ingest.py  ping.py  (+1 more)
docker/: api.Dockerfile  worker.Dockerfile
tools/webhook_receiver/: Dockerfile  main.py
(+10 files in other folders)
